# room_reservation

./: .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 663810119fc5_add_user_relationship_to_reservation.py  9f0adbcb3640_add_user_model.py  a9cbd0ab50d3_add_description_to_meetingroom.py  b19307b3a710_first_migration.py  bcedff2f8166_add_reservation_model.py
app/: main.py
app/api/: router.py  validators.py
app/api/endpoints/: meeting_room.py  reservation.py  user.py
app/core/: base.py  config.py  db.py  init_db.py  user.py
app/crud/: base.py  meeting_room.py  reservation.py
app/models/: __init__.py  reservation.py  user.py
app/schemas/: meeting_room.py  reservation.py  user.py
