[tool.poetry]
name = "room-reservation"
version = "0.1.0"
description = ""
authors = ["Редькин Игорь <igredk@gmail.com>"]
readme = "README.md"
packages = [{include = "room_reservation"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.43"
alembic = "^1.8.1"
greenlet = "^2.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.2.1"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = '3.10'
ignore_missing_imports = false
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = false
exclude = [
    '.venv/',
    'venv/',
]


[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.vscode
  | \.idea
)
'''
